--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -11,16 +11,16 @@
 	"CLOCK_PERIOD": 25,
 	"MACRO_PLACEMENT_CFG": "dir::macro.cfg",
 	"VERILOG_FILES_BLACKBOX": [
-		"dir::../../verilog/gl/user_proj_example.v"
+		"dir::../../verilog/gl/tjrpu.v"
 	],
-	"EXTRA_LEFS": "dir::../../lef/user_proj_example.lef",
-	"EXTRA_GDS_FILES": "dir::../../gds/user_proj_example.gds",
-	"EXTRA_LIBS": "dir::../../lib/user_proj_example.lib",
+	"EXTRA_LEFS": "dir::../../lef/tjrpu.lef",
+	"EXTRA_GDS_FILES": "dir::../../gds/tjrpu.gds",
+	"EXTRA_LIBS": "dir::../../lib/tjrpu.lib",
 	"EXTRA_SPEFS": [
-		"user_proj_example",
-		"dir::../../spef/multicorner/user_proj_example.min.spef",
-		"dir::../../spef/multicorner/user_proj_example.nom.spef",
-		"dir::../../spef/multicorner/user_proj_example.max.spef"
+		"tjrpu",
+		"dir::../../spef/multicorner/tjrpu.min.spef",
+		"dir::../../spef/multicorner/tjrpu.nom.spef",
+		"dir::../../spef/multicorner/tjrpu.max.spef"
 	],
 	"FP_PDN_MACRO_HOOKS": "mprj vdd vss vdd vss",
 	"QUIT_ON_SYNTH_CHECKS": 0,
