--- a/openlane/tjrpu/config.json
+++ b/openlane/tjrpu/config.json
@@ -4,12 +4,13 @@
 	"DESIGN_NAME": "tjrpu",
 	"VERILOG_FILES": [
 		"dir::../../verilog/rtl/defines.v",
-		"dir::../../verilog/rtl/tjrpu.v"
+		"dir::../../verilog/rtl/tjrpu.v",
+		"dir::../../verilog/rtl/gpu.v"
 	],
 	"DESIGN_IS_CORE": 0,
 	"CLOCK_PORT": "wb_clk_i",
 	"CLOCK_NET": "counter.clk",
-	"CLOCK_PERIOD": "24.0",
+	"CLOCK_PERIOD": 24.0,
 	"FP_SIZING": "absolute",
 	"DIE_AREA": "0 0 2800 1760",
 	"FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
