--- a/.github/workflows/user_project_ci.yml
+++ b/.github/workflows/user_project_ci.yml
@@ -98,6 +98,7 @@ jobs:
 
       - name: Harden using Openlane
         run: |
+          make gf180_ram_256x8_wrapper
           make tjrpu
           make user_project_wrapper
 
