--- a/openlane/tjrpu/pin_order.cfg
+++ b/openlane/tjrpu/pin_order.cfg
@@ -1,387 +1,16 @@
 #BUS_SORT
 
 #NR
-$10
-line_a_buf_r_d\[0\]
-line_a_buf_r_wen\[0\]
-line_a_buf_r_q\[0\]
-$10
-line_a_buf_r_q\[1\]
-line_a_buf_r_d\[1\]
-line_a_buf_r_wen\[1\]
-line_a_buf_r_wen\[2\]
-line_a_buf_r_d\[2\]
-line_a_buf_r_q\[2\]
-$20
-line_a_buf_r_q\[3\]
-line_a_buf_r_wen\[3\]
-line_a_buf_r_d\[3\]
-$10
-line_a_buf_r_clk
-line_a_buf_r_a\[8\]
-line_a_buf_r_a\[7\]
-line_a_buf_r_a\[2\]
-line_a_buf_r_a\[1\]
-line_a_buf_r_a\[0\]
-$15
-line_a_buf_r_gwen
-$25
-line_a_buf_r_cen
-line_a_buf_r_a\[6\]
-line_a_buf_r_a\[5\]
-line_a_buf_r_a\[4\]
-line_a_buf_r_a\[3\]
-line_a_buf_r_$10
-line_a_buf_r_d\[4\]
-line_a_buf_r_wen\[4\]
-line_a_buf_r_q\[4\]
-$20
-line_a_buf_r_q\[5\]
-line_a_buf_r_d\[5\]
-line_a_buf_r_wen\[5\]
-line_a_buf_r_wen\[6\]
-line_a_buf_r_d\[6\]
-line_a_buf_r_q\[6\]
-$15
-line_a_buf_r_q\[7\]
-line_a_buf_r_wen\[7\]
-line_a_buf_r_d\[7\]
-$5
-
-$10
-line_b_buf_r_d\[0\]
-line_b_buf_r_wen\[0\]
-line_b_buf_r_q\[0\]
-$10
-line_b_buf_r_q\[1\]
-line_b_buf_r_d\[1\]
-line_b_buf_r_wen\[1\]
-line_b_buf_r_wen\[2\]
-line_b_buf_r_d\[2\]
-line_b_buf_r_q\[2\]
-$20
-line_b_buf_r_q\[3\]
-line_b_buf_r_wen\[3\]
-line_b_buf_r_d\[3\]
-$10
-line_b_buf_r_clk
-line_b_buf_r_a\[8\]
-line_b_buf_r_a\[7\]
-line_b_buf_r_a\[2\]
-line_b_buf_r_a\[1\]
-line_b_buf_r_a\[0\]
-$15
-line_b_buf_r_gwen
-$25
-line_b_buf_r_cen
-line_b_buf_r_a\[6\]
-line_b_buf_r_a\[5\]
-line_b_buf_r_a\[4\]
-line_b_buf_r_a\[3\]
-line_b_buf_r_$10
-line_b_buf_r_d\[4\]
-line_b_buf_r_wen\[4\]
-line_b_buf_r_q\[4\]
-$20
-line_b_buf_r_q\[5\]
-line_b_buf_r_d\[5\]
-line_b_buf_r_wen\[5\]
-line_b_buf_r_wen\[6\]
-line_b_buf_r_d\[6\]
-line_b_buf_r_q\[6\]
-$15
-line_b_buf_r_q\[7\]
-line_b_buf_r_wen\[7\]
-line_b_buf_r_d\[7\]
-$5
-
-$10
-line_a_buf_g_d\[0\]
-line_a_buf_g_wen\[0\]
-line_a_buf_g_q\[0\]
-$10
-line_a_buf_g_q\[1\]
-line_a_buf_g_d\[1\]
-line_a_buf_g_wen\[1\]
-line_a_buf_g_wen\[2\]
-line_a_buf_g_d\[2\]
-line_a_buf_g_q\[2\]
-$20
-line_a_buf_g_q\[3\]
-line_a_buf_g_wen\[3\]
-line_a_buf_g_d\[3\]
-$10
-line_a_buf_g_clk
-line_a_buf_g_a\[8\]
-line_a_buf_g_a\[7\]
-line_a_buf_g_a\[2\]
-line_a_buf_g_a\[1\]
-line_a_buf_g_a\[0\]
-$15
-line_a_buf_g_gwen
-$25
-line_a_buf_g_cen
-line_a_buf_g_a\[6\]
-line_a_buf_g_a\[5\]
-line_a_buf_g_a\[4\]
-line_a_buf_g_a\[3\]
-line_a_buf_g_$10
-line_a_buf_g_d\[4\]
-line_a_buf_g_wen\[4\]
-line_a_buf_g_q\[4\]
-$20
-line_a_buf_g_q\[5\]
-line_a_buf_g_d\[5\]
-line_a_buf_g_wen\[5\]
-line_a_buf_g_wen\[6\]
-line_a_buf_g_d\[6\]
-line_a_buf_g_q\[6\]
-$15
-line_a_buf_g_q\[7\]
-line_a_buf_g_wen\[7\]
-line_a_buf_g_d\[7\]
-$5
-
-$10
-line_b_buf_g_d\[0\]
-line_b_buf_g_wen\[0\]
-line_b_buf_g_q\[0\]
-$10
-line_b_buf_g_q\[1\]
-line_b_buf_g_d\[1\]
-line_b_buf_g_wen\[1\]
-line_b_buf_g_wen\[2\]
-line_b_buf_g_d\[2\]
-line_b_buf_g_q\[2\]
-$20
-line_b_buf_g_q\[3\]
-line_b_buf_g_wen\[3\]
-line_b_buf_g_d\[3\]
-$10
-line_b_buf_g_clk
-line_b_buf_g_a\[8\]
-line_b_buf_g_a\[7\]
-line_b_buf_g_a\[2\]
-line_b_buf_g_a\[1\]
-line_b_buf_g_a\[0\]
-$15
-line_b_buf_g_gwen
-$25
-line_b_buf_g_cen
-line_b_buf_g_a\[6\]
-line_b_buf_g_a\[5\]
-line_b_buf_g_a\[4\]
-line_b_buf_g_a\[3\]
-line_b_buf_g_$10
-line_b_buf_g_d\[4\]
-line_b_buf_g_wen\[4\]
-line_b_buf_g_q\[4\]
-$20
-line_b_buf_g_q\[5\]
-line_b_buf_g_d\[5\]
-line_b_buf_g_wen\[5\]
-line_b_buf_g_wen\[6\]
-line_b_buf_g_d\[6\]
-line_b_buf_g_q\[6\]
-$15
-line_b_buf_g_q\[7\]
-line_b_buf_g_wen\[7\]
-line_b_buf_g_d\[7\]
-$5
-
-$10
-line_a_buf_b_d\[0\]
-line_a_buf_b_wen\[0\]
-line_a_buf_b_q\[0\]
-$10
-line_a_buf_b_q\[1\]
-line_a_buf_b_d\[1\]
-line_a_buf_b_wen\[1\]
-line_a_buf_b_wen\[2\]
-line_a_buf_b_d\[2\]
-line_a_buf_b_q\[2\]
-$20
-line_a_buf_b_q\[3\]
-line_a_buf_b_wen\[3\]
-line_a_buf_b_d\[3\]
-$10
-line_a_buf_b_clk
-line_a_buf_b_a\[8\]
-line_a_buf_b_a\[7\]
-line_a_buf_b_a\[2\]
-line_a_buf_b_a\[1\]
-line_a_buf_b_a\[0\]
-$15
-line_a_buf_b_gwen
-$25
-line_a_buf_b_cen
-line_a_buf_b_a\[6\]
-line_a_buf_b_a\[5\]
-line_a_buf_b_a\[4\]
-line_a_buf_b_a\[3\]
-line_a_buf_b_$10
-line_a_buf_b_d\[4\]
-line_a_buf_b_wen\[4\]
-line_a_buf_b_q\[4\]
-$20
-line_a_buf_b_q\[5\]
-line_a_buf_b_d\[5\]
-line_a_buf_b_wen\[5\]
-line_a_buf_b_wen\[6\]
-line_a_buf_b_d\[6\]
-line_a_buf_b_q\[6\]
-$15
-line_a_buf_b_q\[7\]
-line_a_buf_b_wen\[7\]
-line_a_buf_b_d\[7\]
-$5
-
-$10
-line_b_buf_b_d\[0\]
-line_b_buf_b_wen\[0\]
-line_b_buf_b_q\[0\]
-$10
-line_b_buf_b_q\[1\]
-line_b_buf_b_d\[1\]
-line_b_buf_b_wen\[1\]
-line_b_buf_b_wen\[2\]
-line_b_buf_b_d\[2\]
-line_b_buf_b_q\[2\]
-$20
-line_b_buf_b_q\[3\]
-line_b_buf_b_wen\[3\]
-line_b_buf_b_d\[3\]
-$10
-line_b_buf_b_clk
-line_b_buf_b_a\[8\]
-line_b_buf_b_a\[7\]
-line_b_buf_b_a\[2\]
-line_b_buf_b_a\[1\]
-line_b_buf_b_a\[0\]
-$15
-line_b_buf_b_gwen
-$25
-line_b_buf_b_cen
-line_b_buf_b_a\[6\]
-line_b_buf_b_a\[5\]
-line_b_buf_b_a\[4\]
-line_b_buf_b_a\[3\]
-line_b_buf_b_$10
-line_b_buf_b_d\[4\]
-line_b_buf_b_wen\[4\]
-line_b_buf_b_q\[4\]
-$20
-line_b_buf_b_q\[5\]
-line_b_buf_b_d\[5\]
-line_b_buf_b_wen\[5\]
-line_b_buf_b_wen\[6\]
-line_b_buf_b_d\[6\]
-line_b_buf_b_q\[6\]
-$15
-line_b_buf_b_q\[7\]
-line_b_buf_b_wen\[7\]
-line_b_buf_b_d\[7\]
-$5
-
-$10
-line_a_buf_d_d\[0\]
-line_a_buf_d_wen\[0\]
-line_a_buf_d_q\[0\]
-$10
-line_a_buf_d_q\[1\]
-line_a_buf_d_d\[1\]
-line_a_buf_d_wen\[1\]
-line_a_buf_d_wen\[2\]
-line_a_buf_d_d\[2\]
-line_a_buf_d_q\[2\]
-$20
-line_a_buf_d_q\[3\]
-line_a_buf_d_wen\[3\]
-line_a_buf_d_d\[3\]
-$10
-line_a_buf_d_clk
-line_a_buf_d_a\[8\]
-line_a_buf_d_a\[7\]
-line_a_buf_d_a\[2\]
-line_a_buf_d_a\[1\]
-line_a_buf_d_a\[0\]
-$15
-line_a_buf_d_gwen
-$25
-line_a_buf_d_cen
-line_a_buf_d_a\[6\]
-line_a_buf_d_a\[5\]
-line_a_buf_d_a\[4\]
-line_a_buf_d_a\[3\]
-line_a_buf_d_$10
-line_a_buf_d_d\[4\]
-line_a_buf_d_wen\[4\]
-line_a_buf_d_q\[4\]
-$20
-line_a_buf_d_q\[5\]
-line_a_buf_d_d\[5\]
-line_a_buf_d_wen\[5\]
-line_a_buf_d_wen\[6\]
-line_a_buf_d_d\[6\]
-line_a_buf_d_q\[6\]
-$15
-line_a_buf_d_q\[7\]
-line_a_buf_d_wen\[7\]
-line_a_buf_d_d\[7\]
-$5
-
-$10
-line_b_buf_d_d\[0\]
-line_b_buf_d_wen\[0\]
-line_b_buf_d_q\[0\]
-$10
-line_b_buf_d_q\[1\]
-line_b_buf_d_d\[1\]
-line_b_buf_d_wen\[1\]
-line_b_buf_d_wen\[2\]
-line_b_buf_d_d\[2\]
-line_b_buf_d_q\[2\]
-$20
-line_b_buf_d_q\[3\]
-line_b_buf_d_wen\[3\]
-line_b_buf_d_d\[3\]
-$10
-line_b_buf_d_clk
-line_b_buf_d_a\[8\]
-line_b_buf_d_a\[7\]
-line_b_buf_d_a\[2\]
-line_b_buf_d_a\[1\]
-line_b_buf_d_a\[0\]
-$15
-line_b_buf_d_gwen
-$25
-line_b_buf_d_cen
-line_b_buf_d_a\[6\]
-line_b_buf_d_a\[5\]
-line_b_buf_d_a\[4\]
-line_b_buf_d_a\[3\]
-line_b_buf_d_$10
-line_b_buf_d_d\[4\]
-line_b_buf_d_wen\[4\]
-line_b_buf_d_q\[4\]
-$20
-line_b_buf_d_q\[5\]
-line_b_buf_d_d\[5\]
-line_b_buf_d_wen\[5\]
-line_b_buf_d_wen\[6\]
-line_b_buf_d_d\[6\]
-line_b_buf_d_q\[6\]
-$15
-line_b_buf_d_q\[7\]
-line_b_buf_d_wen\[7\]
-line_b_buf_d_d\[7\]
-$5
+gpu_clk
+tri_wbs_stb_i.*
+tri_wbs_ack_o.*
 
 #S
 wb_.*
 wbs_.*
 la_.*
 irq.*
+y.*
 
 #E
 io_in\[0\]
@@ -408,6 +37,7 @@ io_oeb\[6\]
 io_in\[7\]
 io_out\[7\]
 io_oeb\[7\]
+x_start.*
 
 #WR
 io_in\[8\]
@@ -434,3 +64,4 @@ io_oeb\[14\]
 io_in\[15\]
 io_out\[15\]
 io_oeb\[15\]
+x_end.*
