--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,9 +1,65 @@
-mprj 60 15 N
-line_a_buf_r 100 2000 S
-line_a_buf_g 600 2000 S
-line_a_buf_b 1100 2000 S
-line_a_buf_d 1600 2000 S
-line_b_buf_r 350 2400 S
-line_b_buf_g 850 2400 S
-line_b_buf_b 1350 2400 S
-line_b_buf_d 1850 2400 S
+mprj                60      15      N
+genblk1\[0\].trip   60      865    N
+genblk1\[1\].trip   410     865    N
+genblk1\[2\].trip   760     865    N
+genblk1\[3\].trip   1110    865    N
+genblk1\[4\].trip   1460    865    N
+genblk1\[5\].trip   1810    865    N
+genblk1\[6\].trip   2160    865    N
+genblk1\[7\].trip   2510    865    N
+genblk1\[8\].trip   60      1090    N
+genblk1\[9\].trip   410     1090    N
+genblk1\[10\].trip  760     1090    N
+genblk1\[11\].trip  1110    1090    N
+genblk1\[12\].trip  1460    1090    N
+genblk1\[13\].trip  1810    1090    N
+genblk1\[14\].trip  2160    1090    N
+genblk1\[15\].trip  2510    1090    N
+genblk1\[16\].trip  60      1315    N
+genblk1\[17\].trip  410     1315    N
+genblk1\[18\].trip  760     1315    N
+genblk1\[19\].trip  1110    1315    N
+genblk1\[20\].trip  1460    1315    N
+genblk1\[21\].trip  1810    1315    N
+genblk1\[22\].trip  2160    1315    N
+genblk1\[23\].trip  2510    1315    N
+genblk1\[24\].trip  60      1540    N
+genblk1\[25\].trip  410     1540    N
+genblk1\[26\].trip  760     1540    N
+genblk1\[27\].trip  1110    1540    N
+genblk1\[28\].trip  1460    1540    N
+genblk1\[29\].trip  1810    1540    N
+genblk1\[30\].trip  2160    1540    N
+genblk1\[31\].trip  2510    1540    N
+genblk1\[32\].trip  60      1765    N
+genblk1\[33\].trip  410     1765    N
+genblk1\[34\].trip  760     1765    N
+genblk1\[35\].trip  1110    1765    N
+genblk1\[36\].trip  1460    1765    N
+genblk1\[37\].trip  1810    1765    N
+genblk1\[38\].trip  2160    1765    N
+genblk1\[39\].trip  2510    1765    N
+genblk1\[40\].trip  60      1990    N
+genblk1\[41\].trip  410     1990    N
+genblk1\[42\].trip  760     1990    N
+genblk1\[43\].trip  1110    1990    N
+genblk1\[44\].trip  1460    1990    N
+genblk1\[45\].trip  1810    1990    N
+genblk1\[46\].trip  2160    1990    N
+genblk1\[47\].trip  2510    1990    N
+genblk1\[48\].trip  60      2215    N
+genblk1\[49\].trip  410     2215    N
+genblk1\[50\].trip  760     2215    N
+genblk1\[51\].trip  1110    2215    N
+genblk1\[52\].trip  1460    2215    N
+genblk1\[53\].trip  1810    2215    N
+genblk1\[54\].trip  2160    2215    N
+genblk1\[55\].trip  2510    2215    N
+genblk1\[56\].trip  60      2440    N
+genblk1\[57\].trip  410     2440    N
+genblk1\[58\].trip  760     2440    N
+genblk1\[59\].trip  1110    2440    N
+genblk1\[60\].trip  1460    2440    N
+genblk1\[61\].trip  1810    2440    N
+genblk1\[62\].trip  2160    2440    N
+genblk1\[63\].trip  2510    2440    N
