--- a/openlane/rv_core/config.json
+++ b/openlane/rv_core/config.json
@@ -11,7 +11,7 @@
 	"CLOCK_PERIOD": 25,
 	"FP_SIZING": "absolute",
 	"DIE_AREA": "0 0 500 600",
-	"COMMENT_FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
+	"FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
 	"PL_BASIC_PLACEMENT": 0,
 	"PL_TARGET_DENSITY": 0.45,
 	"FP_CORE_UTIL": 40,
