--- a/openlane/rv_core/pin_order.cfg
+++ b/openlane/rv_core/pin_order.cfg
@@ -1,23 +1,15 @@
 #BUS_SORT
 
 #NR
-clk
-y.*
-x_start.*
-x_end.*
+mem_load_out.*
+alu_out_out.*
 
 #S
-wb_clk_i
-wb_rst_i
-wbs_stb_i
-wbs_cyc_i
-wbs_we_i
-wbs_sel_i.*
-wbs_adr_i.*
-wbs_ack_o
+clk
+inst.*
+pc(?!_next).*
+pc_next.*
 
 #E
-wbs_dat_o.*
 
 #WR
-wbs_dat_i.*
