--- a/openlane/rv_core/pin_order.cfg
+++ b/openlane/rv_core/pin_order.cfg
@@ -1,8 +1,13 @@
 #BUS_SORT
 
 #NR
-mem_load_out.*
-alu_out_out.*
+mem_addr.*
+mem_ld_en
+mem_ld_mask.*
+mem_ld_dat.*
+mem_st_en
+mem_st_mask.*
+mem_st_dat.*
 
 #S
 clk
