--- a/openlane/gpu_core/config.json
+++ b/openlane/gpu_core/config.json
@@ -8,12 +8,12 @@
 	],
 	"DESIGN_IS_CORE": 0,
 	"CLOCK_PORT": "clk",
-	"CLOCK_PERIOD": 25,
+	"CLOCK_PERIOD": 50,
 	"FP_SIZING": "absolute",
-	"DIE_AREA": "0 0 2000 2000",
-	"COMMENT_FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
+	"DIE_AREA": "0 0 1500 1500",
+	"FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
 	"PL_BASIC_PLACEMENT": 0,
-	"PL_TARGET_DENSITY": 0.35,
+	"PL_TARGET_DENSITY": 0.25,
 	"FP_CORE_UTIL": 40,
 	"MAX_FANOUT_CONSTRAINT": 4,
 	"RT_MAX_LAYER": "Metal4",
