--- a/openlane/gpu_core/pin_order.cfg
+++ b/openlane/gpu_core/pin_order.cfg
@@ -1,24 +1,15 @@
 #BUS_SORT
 
 #NR
-clk
-y.*
-x_start.*
-x_end.*
-active
 
 #S
-wb_clk_i
-wb_rst_i
-wbs_stb_i
-wbs_cyc_i
-wbs_we_i
-wbs_sel_i.*
-wbs_adr_i.*
-wbs_ack_o
+clk
+stb
+ack
+command.*
 
 #E
-wbs_dat_o.*
+data_in.*
 
 #WR
-wbs_dat_i.*
+data_out.*
