--- a/verilog/dv/cocotb/design_info.yaml
+++ b/verilog/dv/cocotb/design_info.yaml
@@ -1,8 +1,8 @@
-CARAVEL_ROOT: /usr/caravel_user_project/caravel
-MCW_ROOT: /usr/caravel_user_project/mgmt_core_wrapper
-PDK: sky130A
-PDK_ROOT: /usr/pdk
-USER_PROJECT_ROOT: /usr/caravel_user_project
+CARAVEL_ROOT: /home/thomas/Documents/Projects/tilerisc/caravel
+MCW_ROOT: /home/thomas/Documents/Projects/tilerisc/mgmt_core_wrapper
+PDK: gf180mcuD
+PDK_ROOT: /home/thomas/Documents/Projects/tilerisc/dependencies/pdks
+USER_PROJECT_ROOT: /home/thomas/Documents/Projects/tilerisc
 caravan: false
 clk: 25
 emailto:
