--- a/openlane/tjrpu/pin_order.cfg
+++ b/openlane/tjrpu/pin_order.cfg
@@ -1,16 +1,11 @@
 #BUS_SORT
 
-#NR
-gpu_clk
-tri_wbs_stb_i.*
-tri_wbs_ack_o.*
-
 #S
 wb_.*
 wbs_.*
 la_.*
 irq.*
-y.*
+user_clock2
 
 #E
 io_in\[0\]
@@ -37,7 +32,6 @@ io_oeb\[6\]
 io_in\[7\]
 io_out\[7\]
 io_oeb\[7\]
-x_start.*
 
 #WR
 io_in\[8\]
@@ -64,4 +58,3 @@ io_oeb\[14\]
 io_in\[15\]
 io_out\[15\]
 io_oeb\[15\]
-x_end.*
